--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,76 @@
-aiohttp==3.6.2
+aiohttp==3.7.4.post0
+android==1.0
+appdirs==1.4.4
 astroid==2.4.1
 async-timeout==3.0.1
-asyncio==3.4.3
-attrs==20.2.0
-beautifulsoup4==4.9.1
-certifi==2020.6.20
-chardet==3.0.4
+attrs==20.3.0
+audiostream==0.2
+CacheControl==0.12.6
+cachy==0.3.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cleo==0.8.1
+clikit==0.6.2
 cmake==3.17.2
+crashtest==0.3.1
+cryptography==3.3.2
+Cython==0.29.22
 discord==1.0.1
 discord.py==1.6.0
+distlib==0.3.1
+dukpy==0.2.3
+filelock==3.0.12
+hkb-diamondsquare==1.0.2
+html5lib==1.1
 idna==2.10
 isort==4.3.21
+javascripthon==0.11
 jedi==0.17.0
+jeepney==0.6.0
+keyring==21.8.0
+Kivy==1.11.1
 lazy-object-proxy==1.4.3
+lockfile==0.12.2
+macropy3==1.1.0b2
 mccabe==0.6.1
-multidict==4.7.6
+msgpack==1.0.2
+multidict==5.1.0
+noise==1.2.2
+numpy==1.20.1
+packaging==20.9
 parso==0.7.0
-pip==20.1.1
-pyjnius==1.2.1
-pylint==2.5.2
-PySDL2==0.9.7
+pastel==0.2.1
+perlin==0.0.2
+pexpect==4.8.0
 Pillow==8.1.2
-setuptools==47.1.1
+pip==21.0.1
+pkginfo==1.7.0
+poetry==1.1.5
+poetry-core==1.0.2
+ptyprocess==0.7.0
+pycparser==2.20
+pygame==2.0.0.dev8
+pygame-sdl2==2.1.0
+pyglet==1.5.15
+pyjnius==1.2.1
+pylev==1.3.0
+pylint==2.5.2
+pyparsing==2.4.7
+PySDL2==0.9.7
+requests==2.25.1
+requests-toolbelt==0.9.1
+SecretStorage==3.3.1
+setuptools==46.4.0
+shellingham==1.4.0
 six==1.15.0
-soupsieve==2.0.1
 toml==0.10.1
+tomlkit==0.7.0
 typed-ast==1.4.1
-urllib3==1.25.10
+typing-extensions3.7.4.3
+urllib3==1.26.3
+virtualenv==20.4.2
+webencodings=0.5.1
 wheel==0.34.2
 wrapt==1.12.1
-yarl==1.5.1
+yarl==1.6.3
