--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ typed-ast==1.4.1
 typing-extensions3.7.4.3
 urllib3==1.26.3
 virtualenv==20.4.2
-webencodings=0.5.1
+webencodings==0.5.1
 wheel==0.34.2
 wrapt==1.12.1
 yarl==1.6.3
